--- a/index.html
+++ b/index.html
@@ -192,49 +192,24 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>Anh văn cơ sở 1<br>A604</td>
-                    <td>Anh văn cơ sở 1<br>A604</td>
+                    <td>Anh văn cơ sở 1<br>A604<br>T1-->T2</td>
+                    <td>Anh văn cơ sở 1<br>A604<br>T1-->T3</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>Triết học<br>A603</td>
+                    <td>Pháp luật đại cương<br>C301<br>T3-->T5</td>
+                    <td>Kinh tế chính trị<br>A603<br>T2-->T5</td>
+                    <td>Triết học<br>A603<br>T1->T2</td>
                 </tr>
                 <tr>
                     <td>2</td>
+                    <td>Phương pháp học ĐH và NCKH<br>A603<br>T3-->T5</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>Kinh tế chính trị<br>A603</td>
-                    <td></td>
+                    <td>Anh văn cơ sở 1<br>A604<br>T3->T5</td>
+                    
                 </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Phương pháp học ĐH và NCKH<br>A603</td>
-                    <td></td>
-                    <td></td>
-                    <td>Pháp luật đại cương<br>C301</td>
-                    <td></td>
-                    <td>Anh văn cơ sở 1<br>A604</td>
-                </tr>
-                 <tr>
-                    <td>4</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                
             </tbody>
         </table>
 
@@ -272,33 +247,8 @@
                     <td></td>
                     <td></td>
                 </tr>
-                <tr>
-                    <td>3</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                 <tr>
-                    <td>5</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+
+
             </tbody>
         </table>
 
