--- a/index.html
+++ b/index.html
@@ -213,7 +213,6 @@
             </tbody>
         </table>
 
-        <div class="slogan">Let's Study Hard, Bae!</div>
 
         <!-- Afternoon Schedule -->
         <table>
@@ -232,21 +231,13 @@
                 <tr>
                     <td>1</td>
                     <td></td>
-                    <td></td>
-                    <td>Triết học<br>A603</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td></td>
-                    <td>Bóng đá<br>SANBONG</td>
-                    <td></td>
+                    <td>Bóng đá<br>SANBONG<br>T2-->T4</td>
+                    <td>Triết học<br>A603<br>T1-->T3</td>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
+
 
 
             </tbody>
